testsuite/tests/interpreter_errors/positionnal_after_named/test.out
script.lkql:3:11: error: positional argument after named argument
3 | add(x=21, 21)
  |           ^^

